k8s/platform/minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: storage
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: "254carbon"
spec:
  ingressClassName: nginx
  rules:
  - host: minio.local.254carbon
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              name: console
  - host: s3.local.254carbon
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              name: api
